--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,21 +7,23 @@
 	</head>
 	<body>
 		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-			<li><a href="/log">Log</a></li>
-        		<li><a href="/post">Post!</a></li>
-    		</ul>
+		<ul>
+		<li><a href="/">Home</a></li>
+		<li><a href="/about">About</a></li>
+		<li><a href="/post">Post!</a></li>
+		</ul>
 		</nav>
+		
 		<div class="container">
     		{{ content }}
 		</div><!-- /.container -->
+		
 		<footer>
     		<ul>
-        		<li><a href="mailto:arcticb@dismail.de">email</a></li>
-        		<li><a href="https://github.com/arcticbhub">github.com/arcticbhub</a></li>
-			</ul>
+		<li><a href="mailto:arcticb@dismail.de">email</a></li>
+		<li><a href="https://github.com/arcticbhub">github</a></li>
+		<li><a href="/log">log</a></li>
+		</ul>
 		</footer>
 	</body>
 </html>
