--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>{{ page.title }} {% if page.categories == 'job' %}<span class="price">{{ page.price }}</span>{% endif %}</h1>
+<h1>{{ page.title }} {% if page.categories contain "job" %}<span class="price">{{ page.price }}</span>{% endif %}</h1>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <div class="post">
